--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html> 
-<head> 
-	<title>My Page</title> 
-</head> 
-<body> 
-	<center><img src="c.jpg" height="100%"></center>
-</body> 
+<!DOCTYPE html>
+<html>
+	<title>
+		html
+	</title>
+	<style>
+		h1 {text-align: center;font-size:xx-large;font-family: Verdana, Geneva, Tahoma, sans-serif;}
+	</style>
+<body>
+<H1>FUCK</H1>
+<H1>YOU</H1>
+</body>
 </html>
