--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		h1 {text-align: center;font-size:xx-large;font-family: Verdana, Geneva, Tahoma, sans-serif;}
 	</style>
 <body>
-<H1>hyper text markup language</H1>
-<H1></H1>
+<H1>FUCK</H1>
+<H1>YOU</H1>
 </body>
 </html>
